main.tf
terraform {
    required_providers {
        aws = {
            source = "hashicorp/aws"
            version = "~> 3.27"
        }
    }

    required_version = ">= 0.14.9"
}
 
provider "aws" {
    #access_key = "${var.access_key}"
    #secret_key = "${var.secret_key}"
    profile = "default" # pega os dados default da conta aws na maquina
    region = "us-west-2"
}

resource "aws_instance" "app_server" {
    ami = "ami-830c94e3"
    instance_type = "t2.micro"

    tags = {
        Name = var.instance_name
    }
}

resource "aws_sqs_queue" "sqs_test_queue" {
    name = var.sqs_name
}

resource "aws_sqs_queue_policy" "sqs_test_policy" {
    queue_url = aws_sqs_queue.sqs_test_queue.id

    policy = <<POLICY
        {
            "Version": "2012-10-17",
            "Id": "sqspolicy",
            "Statement": [
                {
                    "Sid": "First",
                    "Effect": "Allow",
                    "Principal": "*",
                    "Action": "sqs:SendMessage",
                    "Resource": "${aws_sqs_queue.sqs_test_queue.arn}"
                }
            ]
        }
    POLICY
}
